media/libcubeb/src/cubeb_wasapi.cpp
@@ -545,8 +545,10 @@ wasapi_stream_render_loop(LPVOID stream)
       assert(padding <= stm->buffer_frame_count);
 
       if (stm->draining) {
-        stm->state_callback(stm, stm->user_ptr, CUBEB_STATE_DRAINED);
-        is_playing = false;
+        if (padding == 0) {
+          stm->state_callback(stm, stm->user_ptr, CUBEB_STATE_DRAINED);
+          is_playing = false;
+        }
         continue;
       }
 
